spec/error_unterminated_string.kex
main do
  IO.printLine("this has to work")
  IO.printLine("this won't)
end